Refactored the icon section on the home page, and completed the link hover effects there

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -58,7 +58,7 @@ html {
     @include primaryFont(42);
     margin-bottom: 20px;
     &--nav {
-        @extend .font2;
+        // @extend .font2;
         margin:0;
     }
 }
