--- a/styles/styles.css
+++ b/styles/styles.css
@@ -765,6 +765,14 @@ html {
   margin-bottom: 15px;
 }
 
+.contact__sm-item {
+  padding: 0 20px;
+}
+
+.contact__sm-item:first-of-type {
+  padding-left: 0;
+}
+
 .contact__sm-link {
   font-family: 'Oswald', sans-serif;
   color: #171717;
@@ -773,11 +781,13 @@ html {
   font-size: 2.4rem;
   text-transform: uppercase;
   color: #227284;
-  padding: 0 20px;
+  -webkit-transition: color 0.5s;
+  -o-transition: color 0.5s;
+  transition: color 0.5s;
 }
 
-.contact__sm-link:first-of-type {
-  padding-left: 0;
+.contact__sm-link:hover, .contact__sm-link:active {
+  color: #f38d8d;
 }
 
 .contact__email-container {
@@ -792,6 +802,13 @@ html {
   font-size: 2rem;
   text-transform: uppercase;
   text-transform: none;
+  -webkit-transition: border-bottom 0.5s;
+  -o-transition: border-bottom 0.5s;
+  transition: border-bottom 0.5s;
+}
+
+.contact__email:hover, .contact__email:active {
+  border-bottom: 1px solid #171717;
 }
 
 .contact__address {
@@ -905,6 +922,13 @@ html {
   color: #171717;
   font-size: 20px;
   font-size: 2rem;
+  -webkit-transition: border-bottom 0.5s;
+  -o-transition: border-bottom 0.5s;
+  transition: border-bottom 0.5s;
+}
+
+.blog__aside-link:hover, .blog__aside-link:active {
+  border-bottom: 1px solid #171717;
 }
 
 .blog__post-container {
