--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -25,7 +25,7 @@
 
     &__img-container {
         position: absolute;
-        background: url("../img/home-image-1-b.jpg");
+        background: url("../img/home-image-1.jpg");
         background-size: cover;
         width: 45%;
         height: 450px;
