--- a/styles/partials/_sections.scss
+++ b/styles/partials/_sections.scss
@@ -226,6 +226,8 @@
 
 }
 
+//Home Page - Photo Gallery Section
+
 .photos {
     &__container {
         display: flex;
@@ -235,17 +237,37 @@
 
     &__item {
         width: 30%;
+        position: relative;
+        
+        &:hover .photos__link {
+            display: block;
+        }
     }
 
     &__photo {
         transition: transform 0.8s;
     }
 
-    &__link {
-        &:hover .photos__photo {
-            transform: scale(1.2);
-        }
+    &__text {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        text-align: center;
     }
+
+    &__link {
+        @include primaryFont(24);
+        display: none;
+        width: 100%;
+        height: 100%;
+        padding-top: 50%;
+        background: linear-gradient(to left, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+        color: $white-shade;
+
+    }
+
 }
 
 
