--- a/styles/styles.css
+++ b/styles/styles.css
@@ -350,6 +350,24 @@ html {
   position: fixed;
 }
 
+.skipLink {
+  position: absolute;
+  font-family: 'Cabin', sans-serif;
+  color: #171717;
+  font-size: 20px;
+  font-size: 2rem;
+  left: -1000px;
+  z-index: 999;
+  background: #171717;
+  color: #f6f6f6;
+  border-radius: 0 0 3px 3px;
+  padding: 2px;
+}
+
+.skipLink:focus {
+  left: 0;
+}
+
 .header {
   height: 500px;
   background: #b9dde7;
@@ -509,10 +527,12 @@ html {
 }
 
 .nav__mobile-link, .nav__mobile-close {
-  font-family: 'Cabin', sans-serif;
+  font-family: 'Oswald', sans-serif;
   color: #171717;
+  font-weight: bold;
   font-size: 24px;
   font-size: 2.4rem;
+  text-transform: uppercase;
 }
 
 .toggle {
@@ -784,6 +804,11 @@ html {
 
 .photos__item {
   width: 30%;
+  position: relative;
+}
+
+.photos__item:hover .photos__link {
+  display: block;
 }
 
 .photos__photo {
@@ -794,10 +819,31 @@ html {
   transition: transform 0.8s, -webkit-transform 0.8s;
 }
 
-.photos__link:hover .photos__photo {
-  -webkit-transform: scale(1.2);
-  -ms-transform: scale(1.2);
-  transform: scale(1.2);
+.photos__text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+}
+
+.photos__link {
+  font-family: 'Oswald', sans-serif;
+  color: #171717;
+  font-weight: bold;
+  font-size: 24px;
+  font-size: 2.4rem;
+  text-transform: uppercase;
+  display: none;
+  width: 100%;
+  height: 100%;
+  padding-top: 50%;
+  background: -webkit-gradient(linear, right top, left top, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3)));
+  background: -webkit-linear-gradient(right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+  background: -o-linear-gradient(right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+  background: linear-gradient(to left, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+  color: #f6f6f6;
 }
 
 .contact__container {
@@ -1251,16 +1297,8 @@ html {
     justify-content: center;
   }
   .photos__item {
-    width: 100%;
+    width: 75%;
     margin-bottom: 30px;
-  }
-  .photos__link {
-    width: 100%;
-  }
-  .photos__link:hover .photos__photo {
-    -webkit-transform: none;
-    -ms-transform: none;
-    transform: none;
   }
   .photos__photo {
     width: 100%;
