--- a/styles/partials/_media.scss
+++ b/styles/partials/_media.scss
@@ -17,6 +17,15 @@
 
 @media (max-width: 975px) {
 
+    .header__img-container {
+        height: 430px;
+
+    }
+
+    .header__text-container {
+        padding-top: 30%;
+    }
+
     .font1--main {
         font-size: 9rem;
 
@@ -93,7 +102,39 @@
 
 }
 
-@media (max-width: 840px) {
+// @media (max-width: 800px) {
+//     .header__container2 {
+//         display: none;
+//     }
+
+//     .header__container1 {
+//         background: linear-gradient(to left, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("../img/home-image-1.jpg") center;
+//         background-size: cover;
+//         height: 100%;
+//         width: 100%;
+//         justify-content: center;
+//         align-items: center;
+//     }
+
+//     .header__text-container {
+//         width: auto;
+//         height: auto;
+//         padding: 0;
+//     }
+
+//     .font1--main {
+//         color: $white-shade;
+
+//         &::after {
+//             display: none;
+//         }
+//     }
+// }
+
+
+
+@media (max-width: 800px) {
+
     .header__container2 {
         display: none;
     }
@@ -120,9 +161,6 @@
             display: none;
         }
     }
-}
-
-@media (max-width: 750px) {
 
     .header--other {
         height: 325px;
