--- a/styles/styles.css
+++ b/styles/styles.css
@@ -253,7 +253,7 @@ html {
 
 .wrapper {
   max-width: 1280px;
-  width: 90%;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -389,7 +389,7 @@ html {
 
 .header__text-container {
   position: relative;
-  width: 50%;
+  width: 55%;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -404,10 +404,10 @@ html {
 
 .header__img-container {
   position: absolute;
-  background: url("../img/home-image-1.jpg");
+  background: url("../img/home-image-1.jpg") center;
   background-size: cover;
-  width: 45%;
-  height: 450px;
+  width: 40%;
+  height: 480px;
   top: -300px;
   left: 0;
   /*new code*/
@@ -455,7 +455,7 @@ html {
 }
 
 .nav__list {
-  width: 70%;
+  width: 80%;
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1111,6 +1111,12 @@ html {
 }
 
 @media (max-width: 975px) {
+  .header__img-container {
+    height: 430px;
+  }
+  .header__text-container {
+    padding-top: 30%;
+  }
   .font1--main {
     font-size: 9rem;
   }
@@ -1195,7 +1201,7 @@ html {
   }
 }
 
-@media (max-width: 840px) {
+@media (max-width: 800px) {
   .header__container2 {
     display: none;
   }
@@ -1225,9 +1231,6 @@ html {
   .font1--main::after {
     display: none;
   }
-}
-
-@media (max-width: 750px) {
   .header--other {
     height: 325px;
   }
